test/errors/parsing/assertOnGpu.1.good
assertOnGpu.chpl:2: error: statement does not support the @assertOnGpu attribute
assertOnGpu.chpl:4: error: fields do not support the @assertOnGpu attribute
assertOnGpu.chpl:8: error: functions do not currently support the @assertOnGpu attribute
